added misc functionality such as message like, message sent
