# group.py
@@ -28,17 +28,25 @@ def create_group(current_user):
     group = Group(name=name)
     db.session.add(group)
     db.session.commit()
+    group_membership = GroupMembership(user=current_user, group=group,is_admin=True)
+    db.session.add(group_membership)
+    db.session.commit()
 
     return make_response(jsonify({"success": f"Group {group.name} created"}), 201)
 
 # Delete group
-@group_bp.route('/groups/<int:group_id>', methods=['DELETE'])
-def delete_group(group_id):
-    current_user_id = get_jwt_identity()
-    current_user = User.query.get(current_user_id)
 
-    if not current_user.is_admin:
-        return make_response(jsonify({"error": "Only admins can delete groups"}), 401)
+@group_bp.route('/groups/<int:group_id>', methods=['DELETE'])
+@token_required
+def delete_group(current_user,group_id):
+    current_user_id =current_user.id
+    #current_user = User.query.get(current_user_id)
+    groupMembership =  GroupMembership.query.filter(GroupMembership.group_id==group_id,GroupMembership.user_id==current_user_id).first()
+    if not groupMembership:
+        return make_response(jsonify({"error": "current user is not part of the group"}), 404) 
+
+    if not groupMembership.is_admin:
+        return make_response(jsonify({"error": "Only group admins can delete groups"}), 401)
 
     group = Group.query.get(group_id)
 
@@ -52,8 +60,9 @@ def delete_group(group_id):
 
 # Add member to group
 @group_bp.route('/groups/<int:group_id>/members', methods=['POST'])
-def add_member_to_group(group_id):
-    current_user_id = get_jwt_identity()
+@token_required
+def add_member_to_group(current_user,group_id):
+    current_user_id = current_user.id
     current_user = User.query.get(current_user_id)
 
     data = request.get_json()
@@ -72,7 +81,7 @@ def add_member_to_group(group_id):
     if not group:
         return make_response(jsonify({"error": "Group not found"}), 404)
 
-    if user in group.memberships:
+    if user.id in set([m.user_id for m in group.memberships]):
         return make_response(jsonify({"error": "User already in group"}), 400)
 
     group_membership = GroupMembership(user=user, group=group)
@@ -81,9 +90,24 @@ def add_member_to_group(group_id):
 
     return make_response(jsonify({"success": f"{user.username} added to group {group.name}"}), 201)
 
+# group info
+@group_bp.route('/groups/<int:group_id>', methods=['GET'])
+@token_required
+def get_group_info(current_user,group_id):
+    current_user_id = current_user.id
+    current_user = User.query.get(current_user_id)
+    group = Group.query.get(group_id)
+
+    if not group:
+        return make_response(jsonify({"error": "Group not found"}), 404)
+
+    return make_response(jsonify({"id":group.id,"name":group.name,"memberships":[{"user_id":m.user_id,"is_admin":m.is_admin} for m in group.memberships]}), 200)# [group.name for group in group]
+
+
 # Search for groups by name
 @group_bp.route('/groups', methods=['GET'])
-def search_groups():
+@token_required
+def search_groups(current_user):
     query = request.args.get('q')
 
     if not query:
